210416 게시판 코드 전체 정리

--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -167,7 +167,7 @@
                         data: JSON.stringify(reply),
                         contentType: 'application/json; charset=utf-8',
                         data_type: 'json',
-                        success: function(dta){ // post 성공 후 수행
+                        success: function(data){ // post 성공 후 수행
                             console.log(data);
 
                             var newRno = parseInt(data);
