--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -23,6 +23,11 @@
                 <input type="email" class="form-control" name="writerEmail"
                        placeholder="Writer Email ">
             </div>
+            <div class="form-group">
+                <label >WriterName</label>
+                <input type="text" class="form-control" name="writerName"
+                       placeholder="WriterName">
+            </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </th:block>
